@@ -1,17 +1,18 @@
 package com.example.fashionlog.service.board;
 
-import com.example.fashionlog.aop.AuthCheck;
-import com.example.fashionlog.aop.AuthorType;
+import com.example.fashionlog.aop.auth.AuthCheck;
+import com.example.fashionlog.aop.auth.AuthorType;
+import com.example.fashionlog.domain.Member;
 import com.example.fashionlog.domain.board.InterviewBoard;
 import com.example.fashionlog.domain.comment.InterviewBoardComment;
-import com.example.fashionlog.domain.Member;
-import com.example.fashionlog.dto.comment.InterviewBoardCommentDto;
 import com.example.fashionlog.dto.board.InterviewBoardDto;
-import com.example.fashionlog.repository.comment.InterviewBoardCommentRepository;
+import com.example.fashionlog.dto.comment.InterviewBoardCommentDto;
 import com.example.fashionlog.repository.board.InterviewBoardRepository;
+import com.example.fashionlog.repository.comment.InterviewBoardCommentRepository;
 import com.example.fashionlog.security.CurrentUserProvider;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -26,15 +27,20 @@ public class InterviewBoardService implements BoardService {
 	private final InterviewBoardCommentRepository interviewBoardCommentRepository;
 	private final CurrentUserProvider currentUserProvider;
 
-	public List<InterviewBoardDto> getAllInterviewPosts() {
-		List<InterviewBoard> interviewPostList = interviewBoardRepository.findAllByStatusIsTrue();
-		return interviewPostList.stream().map(InterviewBoardDto::fromEntity)
+	public Optional<List<InterviewBoardDto>> getAllInterviewPosts() {
+		List<InterviewBoardDto> interviewPostList = interviewBoardRepository.findAllByStatusIsTrue()
+			.stream().map(InterviewBoardDto::fromEntity)
 			.collect(Collectors.toList());
+		return interviewPostList.isEmpty() ? Optional.empty() : Optional.of(interviewPostList);
 	}
 
 	@AuthCheck(value = {"NORMAL", "ADMIN"}, Type = "Interview", AUTHOR_TYPE = AuthorType.POST)
 	@Transactional
 	public void createInterviewPost(InterviewBoardDto interviewBoardDto) {
+		// Not Null 예외 처리
+		InterviewBoard.validateField(interviewBoardDto.getTitle(), "Title");
+		InterviewBoard.validateField(interviewBoardDto.getContent(), "Content");
+
 		Member currentUser = currentUserProvider.getCurrentUser();
 
 		interviewBoardDto.setCreatedAt(LocalDateTime.now());
@@ -47,21 +53,25 @@ public class InterviewBoardService implements BoardService {
 	}
 
 
-	public InterviewBoardDto getInterviewPostDetail(Long id) {
-		InterviewBoard interviewBoard = interviewBoardRepository.findById(id)
-			.orElseThrow(() -> new IllegalArgumentException("게시판 정보를 찾을 수 없습니다."));
-		return InterviewBoardDto.fromEntity(interviewBoard);
+	public Optional<InterviewBoardDto> getInterviewPostDetail(Long id) {
+		return interviewBoardRepository.findByIdAndStatusIsTrue(id)
+			.map(InterviewBoardDto::fromEntity);
 	}
 
-	@AuthCheck(value = {"NORMAL", "ADMIN"}, checkAuthor = true, Type = "Interview", AUTHOR_TYPE = AuthorType.POST)
+	@AuthCheck(value = {"NORMAL",
+		"ADMIN"}, checkAuthor = true, Type = "Interview", AUTHOR_TYPE = AuthorType.POST)
 	@Transactional
 	public void updateInterviewPost(Long id, InterviewBoardDto interviewBoardDto) {
+		InterviewBoard.validateField(interviewBoardDto.getTitle(), "Title");
+		InterviewBoard.validateField(interviewBoardDto.getContent(), "Content");
+
 		InterviewBoard interviewBoard = interviewBoardRepository.findById(id)
 			.orElseThrow(() -> new IllegalArgumentException("게시판 정보를 찾을 수 없습니다."));
 		interviewBoard.update(interviewBoardDto);
 	}
 
-	@AuthCheck(value = {"NORMAL", "ADMIN"}, checkAuthor = true, Type = "Interview", AUTHOR_TYPE = AuthorType.POST)
+	@AuthCheck(value = {"NORMAL",
+		"ADMIN"}, checkAuthor = true, Type = "Interview", AUTHOR_TYPE = AuthorType.POST)
 	@Transactional
 	public void deleteInterviewPost(Long id) {
 		InterviewBoard interviewBoard = interviewBoardRepository.findById(id)
@@ -69,16 +79,20 @@ public class InterviewBoardService implements BoardService {
 		interviewBoard.delete();
 	}
 
-	public List<InterviewBoardCommentDto> getCommentList(Long id) {
-		List<InterviewBoardComment> interviewBoardCommentList =
-			interviewBoardCommentRepository.findAllByCommentStatusIsTrueAndInterviewBoardId(id);
-		return interviewBoardCommentList.stream().map(InterviewBoardCommentDto::fromEntity)
-			.collect(Collectors.toList());
+	public Optional<List<InterviewBoardCommentDto>> getCommentList(Long id) {
+		List<InterviewBoardCommentDto> interviewBoardCommentList =
+			interviewBoardCommentRepository.findAllByCommentStatusIsTrueAndInterviewBoardId(id)
+				.stream().map(InterviewBoardCommentDto::fromEntity)
+				.toList();
+		return interviewBoardCommentList.isEmpty() ? Optional.empty()
+			: Optional.of(interviewBoardCommentList);
 	}
 
 	@AuthCheck(value = {"NORMAL", "ADMIN"}, Type = "Interview", AUTHOR_TYPE = AuthorType.COMMENT)
 	@Transactional
 	public void addComment(Long id, InterviewBoardCommentDto interviewBoardCommentDto) {
+		InterviewBoard.validateField(interviewBoardCommentDto.getContent(), "Content");
+
 		Member currentUser = currentUserProvider.getCurrentUser();
 		InterviewBoard interviewBoard = interviewBoardRepository.findById(id)
 			.orElseThrow(() -> new IllegalArgumentException("게시판 정보를 찾을 수 없습니다."));
@@ -94,21 +108,23 @@ public class InterviewBoardService implements BoardService {
 		interviewBoardCommentRepository.save(interviewBoardComment);
 	}
 
-	@AuthCheck(value = {"NORMAL", "ADMIN"}, checkAuthor = true, Type = "Interview", AUTHOR_TYPE = AuthorType.COMMENT)
+	@AuthCheck(value = {"NORMAL",
+		"ADMIN"}, checkAuthor = true, Type = "Interview", AUTHOR_TYPE = AuthorType.COMMENT)
 	@Transactional
-	public void updateInterviewComment(Long postId, Long commentId,
+	public void updateInterviewComment(Long id,
 		InterviewBoardCommentDto interviewBoardCommentDto) {
-		InterviewBoardComment interviewBoardComment = interviewBoardCommentRepository.findById(
-				commentId)
+		InterviewBoard.validateField(interviewBoardCommentDto.getContent(), "Content");
+
+		InterviewBoardComment interviewBoardComment = interviewBoardCommentRepository.findById(id)
 			.orElseThrow(() -> new IllegalArgumentException("댓글을 찾을 수 없습니다."));
 		interviewBoardComment.updateComment(interviewBoardCommentDto);
 	}
 
-	@AuthCheck(value = {"NORMAL", "ADMIN"}, checkAuthor = true, Type = "Interview", AUTHOR_TYPE = AuthorType.COMMENT)
+	@AuthCheck(value = {"NORMAL",
+		"ADMIN"}, checkAuthor = true, Type = "Interview", AUTHOR_TYPE = AuthorType.COMMENT)
 	@Transactional
-	public void deleteInterviewBoardComment(Long commentId) {
-		InterviewBoardComment interviewBoardComment = interviewBoardCommentRepository.findById(
-				commentId)
+	public void deleteInterviewBoardComment(Long id) {
+		InterviewBoardComment interviewBoardComment = interviewBoardCommentRepository.findById(id)
 			.orElseThrow(() -> new IllegalArgumentException("댓글을 찾을 수 없습니다."));
 		interviewBoardComment.deleteComment();
 	}
@@ -116,7 +132,7 @@ public class InterviewBoardService implements BoardService {
 	/**
 	 * 주어진 게시글 ID의 작성자가 현재 사용자인지 확인합니다.
 	 *
-	 * @param postId 확인할 게시글 ID
+	 * @param postId      확인할 게시글 ID
 	 * @param memberEmail 현재 사용자의 이메일
 	 * @return 현재 사용자가 게시글의 작성자인 경우 true, 그렇지 않은 경우 false
 	 */
@@ -130,7 +146,7 @@ public class InterviewBoardService implements BoardService {
 	/**
 	 * 주어진 댓글 ID의 작성자가 현재 사용자인지 확인합니다.
 	 *
-	 * @param commentId 확인할 게시글 ID
+	 * @param commentId   확인할 게시글 ID
 	 * @param memberEmail 현재 사용자의 이메일
 	 * @return 현재 사용자가 게시글의 작성자인 경우 true, 그렇지 않은 경우 false
 	 */
